add ordinal data in intro

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,67 +1,3 @@
-
-
-@article{mrc_paper,
-	title={{Achievable downlink rates of MRC and ZF precoders in massive MIMO with uplink and downlink pilot contamination}},
-	author={Khansefid, Amin and Minn, Hlaing},
-	journal={{IEEE} Trans. Commun.},
-	volume={63},
-	number={12},
-	pages={4849--4864},
-	year={2015},
-	month = {Dec.}
-}
-
-
-@inproceedings{zhu_matrix,
-	title = {On the matrix inversion approximation based on {Neumann} series in massive {MIMO} systems},
-	booktitle ={ Proc. {IEEE} ICC},
-	author = {Zhu, D. and Li, B. and Liang, P.},
-	month = {Jun.},
-	year = {2015},
-	pages = {1763--1769},
-}
-
-
-@techreport{3GPP,
-	author       = {3GPP}, 
-	title={Study on channel model for frequencies from 0.5 to 100 {GH}z},
-	institution  = {3rd Generation Partnership Project (3GPP)},
-	year         = {2018},
-	month		 ={Aug.},
-	number       = {{TR} 38.901 (V15.1.0)},
-}
-
-
-
-@book{directional,
-	author    = {Mardia, Kantilal Varichau}, 
-	title     = {Statistics of Directional Data},
-	publisher = {Academic Press},
-	year      = 1972,
-	pages     = {41-42},
-	isbn      = {0-12-471150-2}
-}
-
-
-
-@phdthesis{Tataria_PhDThesis,
-	title = "Analysis of Multiuser Cellular Systems Over Heterogeneous Channels",
-	keywords = "Multiuser MIMO Systems, Millimeter-Wave Systems, Propagation Channels, Heterogeneous Systems",
-	author = "Harsh Tataria",
-	year = "2017",
-	school = "Victoria University of Wellington",
-}
-
-
-
-@book{gradshteyn2007,
-	author = {Gradshteyn, I. S. and Ryzhik, I. M.},
-	edition = {Fifth},
-	publisher = {Elsevier/Academic Press, Amsterdam},
-	title = {Table of {I}ntegrals, {S}eries, and {P}roducts},
-	year = 1994
-}
-
 @article{dalmaijer2022statistical,
   title={Statistical power for cluster analysis},
   author={Dalmaijer, Edwin S and Nord, Camilla L and Astle, Duncan E},
@@ -148,4 +84,11 @@ URL = {https://doi.org/10.1214/09-SS053}
   pages={101--115},
   year={2018},
   publisher={Elsevier}
+}
+
+@book{johnson2006ordinal,
+  title={Ordinal data modeling},
+  author={Johnson, Valen E and Albert, James H},
+  year={2006},
+  publisher={Springer Science \& Business Media}
 }
