--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -6,6 +6,15 @@
 
 \title{Ordinal Data clustering and prediction}
 
+
+TODO:
+
+1. add review of proportinal odds approach
+
+2. ordered stereotyp model is one of finite mixture modeling (update to review)
+
+3. add math for  these two model
+
 \author{Quan Zhao}
 
 \maketitle
@@ -59,9 +68,11 @@ Thus, statements of the type
 \]
 are not assumed. (Johnson, 2006~/cite{johnson2006ordinal})
 
+Compare with the continuous data, ordinal data bring less infomation.
+
 % clustering
 
-\subsection*{Ordinal Data Clustering}
+\subsection*{Statistical based Ordinal Data Clustering}
 
 Finite mixture models have emerged as a versatile and powerful statistical tool, garnering increasing attention across various scientific and research disciplines. These models, predicated on the assumption that observed data arise from a blend of several probability distributions, each representing a distinct subpopulation, have revolutionized our approach to understanding complex data structures. The designation "finite" in finite mixture models is pivotal, indicating the specific, but variable, number of components or subgroups within the data. This finite aspect offers a balance between model complexity and interpretability, allowing for detailed yet manageable analysis of diverse datasets.
 
@@ -76,45 +87,6 @@ The significance of finite mixture models is vividly illustrated in Figure~\ref{
     From~\cite{dalmaijer2022statistical}.} % Caption for the image
     \label{fig:trend} % Label for referencing the figure in the text
   \end{figure}
-
-
-\section{literature review}
-% The section on analysis is split into two sub-sections. 
-% (about 2-3 pages)
-
-% In 2000~\cite{mclachlan2000finite} proposesed the mixture model in terms of $Y_j$ and $Z_j$ is most useful 
-% in that it allws the the maximum likelihood estimate (MLE) of the Mixture distribution to be computed via 
-% a straightforward application of the EM algorithms.
-% It is also useful in implementing the MCMC methods in the fitting of mixture models in a Bayesian framework.
-% (here, $Y_j$ is feature vector and $Z_j$ is components label vector.)
-
-% In 2002~\cite{figueiredo2002unsupervised} proposes an unsupervised algorithm for learning a finite mixture model from multivariate data. The algorithm can select the number of components and does not require careful initialization, making it less sensitive to initialization than the standard expectation-maximization algorithm. The proposed method also avoids the possibility of convergence toward a singular estimate at the boundary of the parameter space. The authors provide a formal and principled approach to clustering and model selection, which can be applied to a wide range of unsupervised learning problems. The paper is well-written and provides a clear explanation of the proposed algorithm, making it a valuable resource for researchers and practitioners in the field of machine learning.
-
-% In 2010~\cite{10.1214/09-SS053} addresses key issues in estimation, model selection, and likelihood maximization using the EM algorithm, offering practical guidance for researchers and practitioners. this work also provide valuable insights into methodologies for simulating realizations from Gaussian mixture models, graphical tools for visual representation, and applications involving non-Gaussian mixtures. 
-
-% In 2016~\cite{matechou2016biclustering} proposes finite mixture models that can simultaneously cluster the rows and columns of two-mode ordinal categorical response data. The models utilize the popular proportional odds parameterization and provide insights into major patterns present in the data. Model-fitting is performed using the EM algorithm, resulting in a fuzzy allocation of rows and columns to corresponding clusters. The clustering ability of the models is evaluated through simulation studies and demonstrated using two real data sets. The paper addresses the challenge of modeling heterogeneity in two-mode ordinal data by developing finite mixture models that offer a comprehensive and interpretable approach to clustering both rows and columns, ultimately providing insights into the major patterns present in the data.
-
-% In 2016~\cite{fernandez2016mixture} introduces a new methodology for clustering rows and columns in a matrix of ordinal data. It utilizes likelihood-based methods through finite mixtures with the stereotype model. The paper demonstrates the reliability of this approach through a simulation study and further illustrates its application with two examples. Additionally, it reviews and compares several model choice measures, providing a robust framework for analyzing ordinal data matrices using fuzzy clustering techniques.
-
-% In 2018~\cite{jacques2018model} introduces a novel model-based co-clustering algorithm for ordinal data, which leverages the latent block model and the BOS distribution. The BOS model, a type of mixture model, is employed to probabilistically model the ordinal data. Notably, the algorithm's parsimony and interpretability are underscored, along with its capability to handle missing data, a crucial aspect in mixture model applications. The authors provide a comprehensive description of the algorithm, including its inference strategy and tools for selecting the number of co-clusters. Furthermore, the paper presents numerical studies and real data applications to demonstrate the efficiency and practical relevance of the proposed model. Overall, this work contributes significantly to the field of clustering algorithms for ordinal data, offering a valuable tool for practitioners working with high-dimensional datasets and showcasing the potential of mixture models in this context.
-
-% In 2019~\cite{fernandez2019finite} improved their work. It extends the finite mixture models to a broader range of data types, including binary, count, and ordinal data, under a unified statistical framework. It also introduces maximum likelihood estimation parameters and the option of using likelihood information criteria for model comparison. and it presentation of a Bayesian approach, where parameters and the number of clusters are estimated simultaneously. 
-
-%
-
-% Mixture models have evolved significantly since McLachlan's 2000 proposition of using $Y_j$ and $Z_j$ for efficient maximum likelihood estimation (MLE) through the EM algorithm. This method not only simplified MLE computations but also laid the groundwork for Bayesian approaches using MCMC methods in mixture models (McLachlan, 2000~\cite{mclachlan2000finite}).
-
-% In 2002, Figueiredo's unsupervised algorithm marked a paradigm shift by autonomously determining the number of components in a finite mixture model. This innovation reduced the dependency on careful initialization, a common pitfall in earlier methods, and addressed the issue of singular estimates (Figueiredo, 2002~\cite{figueiredo2002unsupervised}).
-
-% A decade later, the 2010 paper by Volodymyr and Ranjan offered comprehensive guidelines for EM algorithm applications in mixture models, addressing estimation, model selection, and maximization challenges. This work also expanded the field's understanding of non-Gaussian mixtures and introduced graphical tools for better visualization and simulation (Volodymyr and Ranjan, 2010~\cite{10.1214/09-SS053}).
-
-% The subsequent years saw an expansion into biclustering via finite mixture models, particularly for two-mode ordinal categorical data. Matechou in 2016 used proportional odds parameterization to cluster data rows and columns, offering a nuanced approach to understanding data patterns (Matechou, 2016~\cite{matechou2016biclustering}). Fernandez in the same year provided an alternative clustering methodology through likelihood-based finite mixtures, showcasing its effectiveness in handling ordinal data (Fernandez, 2016~\cite{fernandez2016mixture}).
-
-% Jacques' 2018 contribution is particularly notable for introducing a model-based co-clustering algorithm that effectively handles ordinal data using the BOS distribution. This method's capacity to manage missing data and its parsimonious approach marked a significant advancement in mixture model applications (Jacques, 2018~\cite{jacques2018model}).
-
-% Finally, Fernandez's 2019 paper extended the scope of finite mixture models to encompass binary, count, and ordinal data, showcasing the versatility of these models. This work also highlighted the Bayesian approach for simultaneous estimation of parameters and cluster numbers, reflecting the field's ongoing evolution towards more sophisticated and comprehensive models (Fernandez, 2019~\cite{fernandez2019finite}).
-
-%
 
 \subsection*{Early Developments (2000--2010)}
 
@@ -134,9 +106,11 @@ Jacques' 2018 introduction of a model-based co-clustering algorithm was a signif
 
 Fernandez's 2019 extension of finite mixture models to binary, count, and ordinal data under a unified statistical framework represented a consolidation and expansion of mixture model applications. The introduction of maximum likelihood estimation parameters and the Bayesian approach for simultaneous estimation were indicative of the field's progression towards more flexible and comprehensive modeling techniques (Fernandez, 2019~\cite{fernandez2019finite}).
 
-% \section{Conclusions}
+\subsection*{Compare with other clustering algorithm}
 
-% In summary, the evolution of infinite mixture models from 2000 to 2019 has largely concentrated on clustering, successfully categorizing new observations into predefined clusters. However, this predominant focus presents a fertile ground for future research. An intriguing direction is exploring models that dynamically adjust or create new cluster spaces as data evolves, moving beyond static clustering methods. Such developments could lead to more adaptive and flexible models, capable of handling the complexities of continuously changing data sets. The integration of mixture models with other advanced machine learning techniques might also offer novel approaches, potentially enhancing their applicability and effectiveness across various domains. This potential for innovation signifies a promising future for the field of infinite mixture models.
+Compare with Tree based or distance based clustering algorithm, statistical based clustering algorithm shows more powerful on ordinal data, especially for multiclass and multioutput case.
+One reason is Ordinal data not assume the distance between each category are equal.
+secondly, Ordinal data usually include few categories which not good for tree based regression.
 
 \section{Conclusion and Future Directions}
 
