add more compare of ordinal data with continuous data in intro

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -86,9 +86,40 @@ URL = {https://doi.org/10.1214/09-SS053}
   publisher={Elsevier}
 }
 
-@book{johnson2006ordinal,
-  title={Ordinal data modeling},
-  author={Johnson, Valen E and Albert, James H},
-  year={2006},
-  publisher={Springer Science \& Business Media}
+@book{Johnson1999,
+  author = {Johnson, Valen E. and Albert, James H.},
+  title = {Ordinal Data Modeling},
+  publisher = {Springer New York},
+  year = {1999},
+  edition = {1},
+  doi = {10.1007/b98832},
+  url = {https://doi.org/10.1007/b98832}
+}
+
+@article{Stevens1946,
+  author = {Stevens, S. S.},
+  title = {On the theory of scales of measurement},
+  journal = {Science},
+  volume = {103},
+  number = {2684},
+  pages = {677--680},
+  year = {1946},
+  doi = {10.1126/science.103.2684.677},
+}
+
+@book{Conover1999,
+  author = {Conover, W. J.},
+  title = {Practical Nonparametric Statistics},
+  edition = {3},
+  publisher = {John Wiley \& Sons},
+  year = {1999},
+}
+
+@article{Likert1932,
+  author = {Likert, R.},
+  title = {A Technique for the Measurement of Attitudes},
+  journal = {Archives of Psychology},
+  volume = {140},
+  pages = {1--55},
+  year = {1932},
 }
