add plot to desc oridinal data categories dist

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -68,6 +68,16 @@ Thus, statements of the type
 \]
 are not assumed. (Johnson, 2006~\cite{Johnson1999})
 
+\begin{figure}[ht!] % 'h!' places the figure here, in the text
+    \centering % Centers the figure
+    \includegraphics[width=0.6\textwidth]{images/ordinal_data_dist.png} % Include the image with 50% of the text width
+    \caption{Latent trait interpretation of ordinal classification. 
+    In this plot, the logistic density again represents the distribution of latent traits for a particular individual. 
+    It is assumed that a random variable is drawn from this density, and the value of this random variable determines an individual's classification. 
+    For example, if a deviate of 0.5 is drawn, the individual receives a D. (Johnson, 2006~\cite{Johnson1999}).} % Caption for the image
+    \label{fig:ordinal} % Label for referencing the figure in the text
+  \end{figure}
+
 \subsection*{Difference to continuous data}
 
 In the context of statistical analysis, the distinction between ordinal and continuous data types is pivotal, influencing both the choice of analytical methods and the depth of insights that can be derived. 
@@ -136,4 +146,3 @@ Furthermore, as data complexity and volume continue to escalate, the demand for 
 
 
 \end{document}
-
