--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -99,6 +99,20 @@ In summary, while ordinal data is invaluable for capturing rankings and subjecti
 
 Finite mixture models have emerged as a versatile and powerful statistical tool, garnering increasing attention across various scientific and research disciplines. These models, predicated on the assumption that observed data arise from a blend of several probability distributions, each representing a distinct subpopulation, have revolutionized our approach to understanding complex data structures. The designation "finite" in finite mixture models is pivotal, indicating the specific, but variable, number of components or subgroups within the data. This finite aspect offers a balance between model complexity and interpretability, allowing for detailed yet manageable analysis of diverse datasets.
 
+The Finite mixture model is defined as:
+\begin{equation}
+p(x_i|\Theta) = \sum_{k=1}^{K} \pi_k f(x_i|\theta_k)
+\end{equation}
+where:
+\begin{itemize}
+    \item $p(x_i|\Theta)$ denotes the overall mixture model's density or mass function for observation $x_i$.
+    \item $K$ is the total number of component distributions in the mixture.
+    \item $\pi_k$ represents the mixing proportion of the $k$th component, satisfying $0 \leq \pi_k \leq 1$ and $\sum_{k=1}^{K} \pi_k = 1$.
+    \item $f(x_i|\theta_k)$ is the probability density function (pdf) or probability mass function (pmf) of the $k$th component distribution evaluated at $x_i$.
+    \item $\theta_k$ denotes the parameter vector of the $k$th component distribution.
+    \item $\Theta$ symbolizes the complete set of parameters for the mixture model, including both the mixing proportions $\{\pi_1, \ldots, \pi_K\}$ and the parameters of the component distributions $\{\theta_1, \ldots, \theta_K\}$.
+\end{itemize}
+
 The significance of finite mixture models is vividly illustrated in Figure~\ref{fig:trend}, which showcases a robust upward trajectory in related publications. This trend not only reflects the growing academic and practical interest in these models but also underscores their evolving sophistication and broadening applicability. From the early advancements in maximizing likelihood estimation through algorithms like EM, as pioneered by McLachlan in 2000, to the more recent developments in handling a variety of data types, including binary, count, and ordinal data, finite mixture models have continuously adapted and expanded their scope.
 
 \begin{figure}[ht!] % 'h!' places the figure here, in the text
