add po approach

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -123,3 +123,14 @@ URL = {https://doi.org/10.1214/09-SS053}
   pages = {1--55},
   year = {1932},
 }
+
+@article{mccullagh1980regression,
+  title={Regression models for ordinal data},
+  author={McCullagh, Peter},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={42},
+  number={2},
+  pages={109--127},
+  year={1980},
+  publisher={Wiley Online Library}
+}
