--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -134,3 +134,14 @@ URL = {https://doi.org/10.1214/09-SS053}
   year={1980},
   publisher={Wiley Online Library}
 }
+
+@article{anderson1984regression,
+  title={Regression and ordered categorical variables},
+  author={Anderson, John A},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={46},
+  number={1},
+  pages={1--22},
+  year={1984},
+  publisher={Wiley Online Library}
+}
