--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -32,23 +32,13 @@
 
 \subsection*{Ordinal Data}
 
-Ordinal data is a type of categorical data in statistics that represents categories with a meaningful order or ranking among them, but without a precise difference in the scale between each category. This type of data is distinct because, while it allows for a rank order among the values, the intervals between the values are not necessarily equal or known. This means that ordinal data can tell us about the order of categories but not about the magnitude of difference between them.
+Ordinal data, a pivotal concept in statistical analysis, represents categorical data characterized by a meaningful order among its categories, without implying uniform differences between these ranks. Unlike nominal data, which merely categorizes without any implied ranking, ordinal data elevates the categorical analysis by introducing a hierarchy or sequence that is significant yet lacks quantifiable intervals between its elements. This characteristic distinguishes ordinal data: it conveys the sequence of values but remains silent on the magnitude of difference between successive ranks.
 
-Ordinal data include, Ranking data which can be sorted or ranked in order, but the distances between data points are not meaningful.
-Ordinal data often consists of labels or descriptions, though it can be coded with numbers for analysis. Even when numerical codes are used, arithmetic operations (such as addition or subtraction) are not meaningful.
-Statistical analysis of ordinal data typically involves non-parametric methods. The median and mode can be used as measures of central tendency
+Such data often appear as rankings or ordered classifications where the precise distance between categories is undefined or irrelevant. Despite sometimes being numerically coded for analytical convenience, ordinal data resist traditional arithmetic operations, rendering calculations like addition or subtraction inappropriate and misleading.
 
-Ordinal data is common in surveys, questionnaires, and other forms of qualitative research, where it's used to capture attitudes, opinions, preferences, and other subjective assessments that inherently have an order but not a measurable distance between categories. 
+In the realm of statistical analysis, ordinal data necessitates specialized, non-parametric methods. The median and mode stand out as appropriate measures of central tendency for these data types, aligning with their ordered nature without assuming equal intervals between categories.
 
-Ordinal data are the most frequently encountered type of data in the social
-sciences. Survey data, in which respondents are asked to characterize their opinions
-on scales ranging from “strongly disagree” to “strongly agree,” are a common
-example of such data. For our purposes, the defining property of ordinal data
-is that there exist a clear ordering of the response categories, but no underlying
-interval scale between them. For example, it is generally reasonable to assume an
-ordering of the form
-strongly disagree < disagree < dont know < agree < strongly agree,
-but it usually does not make sense to assign integer values to these categories.
+Ordinal data's prevalence is notably high in social sciences, especially in surveys and questionnaires designed to capture subjective assessments such as attitudes, opinions, and preferences. These instruments frequently employ scales—ranging from "strongly disagree" to "strongly agree"—to elicit responses that, while ordered, do not support the notion of fixed distances between adjacent categories. This principle underlines the core attribute of ordinal data: the clear hierarchy among responses without an inherent interval scale to quantify the gaps between them. Consequently, assigning numerical values to such categories for computational purposes is generally discouraged and conceptually flawed, as it misinterprets the data's ordinal nature 
 Thus, statements of the type
 \[
 \text{``disagree''} - \text{``strongly disagree''}
