refine the section connect ordinal data and statical approach

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -70,7 +70,12 @@ For instance, in Likert scale responses commonly used in surveys, the ordinal na
 
 Comparatively, continuous data's capacity for precise measurement and the application of a broader range of statistical analyses enables a more detailed and accurate exploration of phenomena. This difference underscores the importance of data type consideration in research design and analysis, as it directly impacts the validity and comprehensiveness of research findings.
 
-In summary, while ordinal data is invaluable for capturing rankings and subjective assessments, its analytical limitations highlight the superior informational value of continuous data in quantitative research. This distinction is crucial for researchers in the selection of appropriate statistical methods and in the interpretation of their data, ensuring that conclusions drawn are both valid and meaningful.
+In summary, while ordinal data is invaluable for capturing rankings and subjective assessments, 
+its analytical limitations highlight the superior informational value of continuous data in quantitative research. 
+This distinction is crucial for researchers in the selection of appropriate statistical methods and in the interpretation of their data, 
+ensuring that conclusions drawn are both valid and meaningful.
+
+Due to the limitations of distance-based clustering approaches like K Neighbors, which struggle with the non-quantitative nature of ordinal data, statistical-based clustering methods offer a more effective solution. These methods adeptly handle the ordinal data's intrinsic ranking system, bypassing the need for precise numerical distances between categories.
 
 % clustering
 
