refine compare tree and dist based approach with statistical approach

--- a/report/vuw_stat487_report.tex
+++ b/report/vuw_stat487_report.tex
@@ -176,10 +176,8 @@ Fernandez's 2019 extension of finite mixture models to binary, count, and ordina
 
 \subsection*{Compare with other clustering algorithm}
 
-Compare with Tree based or distance based clustering algorithm, statistical based clustering algorithm shows more powerful on ordinal data, especially for multiclass and multioutput case.
-One reason is Ordinal data not assume the distance between each category are equal.
-secondly, Ordinal data usually include few categories which not good for tree based regression.
-
+Compared to tree based or distance based clustering algorithms, statistical based clustering algorithms demonstrate superior performance with ordinal data, particularly in scenarios involving multiclass and multioutput cases. 
+This advantage stems from two key factors: firstly, ordinal data do not presuppose equal distances between categories, a condition that distance-based methods often rely on. Secondly, ordinal data typically encompass only a few categories, which can limit the effectiveness of tree-based methods designed to partition data across a broader numerical range.
 \section{Conclusion and Future Directions}
 
 The evolution of mixture models from McLachlan's initial work in 2000 to advanced models in 2019 showcases a field marked by dynamic growth and innovation. These models have not only solved historical challenges but also set the stage for future advancements. As the field progresses, a key focus is integrating machine learning with traditional statistical methods, enhancing the capability of mixture models to accurately predict cluster membership for new data points. This is especially relevant in artificial intelligence applications, where mixture models contribute to improved pattern recognition and decision-making.
